Adding links to namespaces has undesireable UX (#1622)
* Added validation to namespaces URL
Issue: AAH-149

Signed-off-by: Milan Pospisil <arkanus@seznam.cz>

* Flex-basis: 0

--- a/src/components/namespace-form/namespace-form.scss
+++ b/src/components/namespace-form/namespace-form.scss
@@ -28,17 +28,20 @@
 
   .link-name {
     flex-grow: 1;
+    flex-basis: 0;
   }
 
   .link-url {
     flex-grow: 2;
+    flex-basis: 0;
     margin-left: 20px;
   }
 
   .link-button {
     display: flex;
-    align-items: center;
+    align-items: top;
     margin-left: 10px;
+    margin-top: 8px;
 
     .link-container {
       width: 20px;
