CollectionCard: add SignatureBadge (#1763)
* CollectionCard: add SignatureBadge

replaces #1628

this just adds the signature badge to collection card

* ComponentCard - add left margin for signature badge

useful when a logo is too wide

No-Issue

--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -54,6 +54,10 @@
       color: var(--pf-global--info-color--100);
       margin-right: 3px;
     }
+
+    .hub-signature-badge {
+      margin-left: 5px;
+    }
   }
 
   .description {
