--- a/src/containers/role-management/role.scss
+++ b/src/containers/role-management/role.scss
@@ -1,3 +1,9 @@
-a {
-  text-decoration: none;
+.role-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .pf-c-toolbar__content {
+    padding-left: 0;
+  }
 }
