Do not use global active CSS selector (#1992)
* Add Changes and issue commit
Issue: AAH-1546

* Css fix - class selector over global selector settings

hub prefix

--- a/src/components/sort-table/sort-table.scss
+++ b/src/components/sort-table/sort-table.scss
@@ -1,9 +1,11 @@
 @import '../../global-variables.scss';
 
-.active {
-  color: $blue;
-}
+.hub-SortTable-headers {
+  .active {
+    color: $blue;
+  }
 
-.inactive {
-  color: $grey;
+  .inactive {
+    color: $grey;
+  }
 }
