Collections - Ensure feature parity between list/detail screens (#1766)
* Deprecate & Upload new version in the collection detail and collection list screens
Issue: AAH-1025

Co-authored-by: Martin Hradil <mhradil@redhat.com>

--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -49,6 +49,7 @@
   .logo-row {
     display: flex;
     justify-content: space-between;
+    padding-right: 8px;
 
     .icon {
       color: var(--pf-global--info-color--100);
