--- a/src/components/collection-list/list-item.scss
+++ b/src/components/collection-list/list-item.scss
@@ -6,12 +6,7 @@
   width: 200px;
 }
 
-.content {
-  text-transform: capitalize;
-}
-
-.hub-numeric-label-capitalize-text {
+.hub-numeric-label-label {
   font-size: var(--pf-global--FontSize--xs);
   color: var(--pf-global--color--200);
-  text-transform: capitalize;
 }
