Enable FeatureFlagsAPI in insights mode (#2335)
* translate sync alert

* RepoSelector: move insights mode switch to BaseHeader, fix extra top padding in insights mode

because BaseHeader wraps RepoSelector when present, but not rendering is still present

* insights-loader: drop older nav event type support

(comes from #715, pre-chrome 2.0)

* ActiveUserAPI: simplify getUser, return getActiveUser.data

* insights-loader: add FeatureFlagsAPI call; move insights and standalone a step closer

* UI to use feature flags in insights mode

Issue: AAH-1800

* edit-namespace, namespace-form: drop unused userId, extra getUser call

the code has been there from the start, only makes sense in insights mode, and unused since #183

used to be just getUser->setState->loadNamespace, before #1115 added error handling, changing to just loadNamespace

* InsightsUserType is unused, index.d.ts has a conflicting type for getUser, update and move there

* ActiveUserAPI.getUser, getActiveUser - merge into getUser, no users of these functions can really deal with the insights version

* insights-loader - drop auth.getUser wait, already happening in api base *before* getUser

* remove extra border in collections documentation navitems in insights mode

* convert src/loaders/insights/ to typescript

* standalone-loader: sort context params

* insights-loader: change activeUser to user

* loadContext: shared code to load alerts, featureFlags, settings, user

* insights-loader: update title using identifyApp instead of document.title

as per https://github.com/RedHatInsights/insights-chrome/blob/master/docs/api.md#update-document-title

* ActiveAPI: type getToken, simplify promises

--- a/src/loaders/app.scss
+++ b/src/loaders/app.scss
@@ -47,3 +47,10 @@ body,
 #root {
   height: 100%;
 }
+
+// insights mode Sidenav/Navigation overrides this for all navitems, restoring in main
+.pf-c-page__main {
+  .pf-c-nav__list > .pf-c-nav__item:not(:first-child) {
+    border-top: 0;
+  }
+}
