simplify toolbar css (#2568)
many containers use a div class wrapper around toolbar to set display flex, justify content, align items
some also set inner toolbar content padding
(and search+namespaces use a different structure not addressed here)

this is a minimal change to dedup these into hub-toolbar (doesn't reset padding) and hub-list-toolbar (does)
(I suspect we can merge the two as well, but not enough to do it right away)

No-Issue

--- a/src/loaders/app.scss
+++ b/src/loaders/app.scss
@@ -54,3 +54,21 @@ body,
     border-top: 0;
   }
 }
+
+// list screen toolbars
+// FIXME: merge these 2; also with search, namespace-list, namespace-details, hub-toolbar-wrapper
+.hub-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hub-list-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .pf-c-toolbar__content {
+    padding-left: 0;
+  }
+}
