Clean up more old code (#3176)
* Clean up more old code

No-Issue

* fix unused exports - unexport when alive, delete when dead

and moved role-management utils from containers to utilities
and fixed previously missed relative imports from src/thing

* split global-variables

trying to minimize relationships between css pieces

* update README for community, start-insights

* start-insights on ci

--- a/src/components/my-imports/my-imports.scss
+++ b/src/components/my-imports/my-imports.scss
@@ -1,4 +1,8 @@
-@import '../../global-variables.scss';
+$black: #363636;
+$green: #5bb75b;
+$red: #ff5850;
+$warning: #f90;
+$white: #fff;
 
 .hub-c-toolbar__item-selected-item {
   background-color: #edf8ff;
