[Cross Repo Search] Namespace detail, collection list and collection detail refactor (#3467)
* use cvs for namespaces and collections
* fix after rebase
* fix issues and bugs
* fix compound filter
* fix tests
* fix disableRepoSwitch in tests
* fix permissions and tests
* fix additional tests
* fix collection upload test
Issue: AAH-767

--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -22,6 +22,15 @@
     display: block;
   }
 
+  .card-badge-area {
+    display: flex;
+    justify-content: end;
+    gap: 5px;
+    flex-wrap: wrap;
+    align-content: stretch;
+    align-items: center;
+  }
+
   .name {
     font-weight: bold;
     text-overflow: ellipsis;
@@ -48,10 +57,6 @@
     .icon {
       color: var(--pf-global--info-color--100);
       margin-right: 3px;
-    }
-
-    .hub-signature-badge {
-      margin-left: 5px;
     }
   }
 
