--- a/src/components/collection-list/list-item.scss
+++ b/src/components/collection-list/list-item.scss
@@ -10,3 +10,7 @@
   font-size: var(--pf-global--FontSize--xs);
   color: var(--pf-global--color--200);
 }
+
+.hub-repository-badge {
+  margin-right: 5px;
+}
